# tiny-real-time-world-model

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: pages.yml
gcp/: README.md  bootstrap.sh  create-training-vm.sh  startup-train.sh
public/model/: README.md
src/: App.tsx  styles.css
src/model/: diffusion.ts
src/sim/: breakout.ts
world_model_lab/: __init__.py  env.py  eval_rollout.py  export_onnx.py  model.py  train.py
